[package]
name = "sled-ext"
version = "0.1.0"
edition = "2024"
description = "Based on SLED, KV storage similar to Redis, supporting key-value,Maps,Lists,TTL,Counters"
license = "MIT"   
authors = ["yaobos@outlook.com"]  
repository = "https://github.com/yaobo-lab/sled-ext"


[features]
default = []
ttl=["tokio"]


[dependencies]
serde_json = '1.0.145'
anyhow = '1.0.100' 
sled ="0.34.7"
bincode =  "2.0.1"
tokio = { version = "1.44",  default-features = false, features = ["sync","time", "rt-multi-thread"],optional = true }

[dependencies.serde]
version = '1.0.219'
features = ['derive']


[dependencies.log]
version = '0.4.17'
default-features = false
features = ['std']
