[package]
name = "sled-ext"
version = "0.3.3"
edition = "2024"
description = "A sled extension(TTL,GET ,INSERT...)"
license = "MIT"   
authors = ["yaobos@outlook.com"]  
repository = "https://github.com/yaobo-lab/sled-ext"

[features]
default = ["ttl"]
ttl=["tokio"]

[dependencies]
serde_json = '1.0.145'
anyhow = '1.0.100' 
sled ="0.34.7"
bincode =  "2.0.1"
tokio = { version = "1.44",  default-features = false, features = ["sync","time", "rt-multi-thread"],optional = true }

[dependencies.serde]
version = '1.0.219'
features = ['derive']


[dependencies.log]
version = '0.4.17'
default-features = false
features = ['std']


[dev-dependencies]
tokio = { version = "1.47.1" ,features =  ["full"] }
toolkit-rs={ version = "1.0.15",features = ['panic_handle']}
bincode =  "2.0.1"

[[example]]
name = "demo"
path = "examples/demo.rs"
required-features = ["ttl"] 

# [[example]]
# name = "async_demo"
# path = "examples/async_demo.rs"
# required-features = ["ttl"] 